add currency to payslip, add deduction.
